[gd_scene format=3 uid="uid://bss34g8jsh6b8"]

[ext_resource type="Script" uid="uid://bg5ywsrsomvr7" path="res://example_code/integration_tests.gd" id="1_11tcf"]
[ext_resource type="Script" uid="uid://jvk6ou7i2d4s" path="res://addons/SpacetimeDB/nodes/row_receiver/row_receiver.gd" id="2_3ljp4"]
[ext_resource type="PackedScene" uid="uid://unjs4buic6sv" path="res://scenes/table_tab_ui.tscn" id="2_p8i4h"]
[ext_resource type="Script" uid="uid://comkkjeylv48t" path="res://spacetime_bindings/schema/types/main_test_table_datatypes.gd" id="3_p8i4h"]
[ext_resource type="Script" uid="uid://lukb1o0c2g7d" path="res://spacetime_bindings/schema/types/main_test_scheduled_table.gd" id="4_fl47p"]
[ext_resource type="Script" uid="uid://cn56nekkacqg7" path="res://spacetime_bindings/schema/types/main_test_type.gd" id="5_fl47p"]
[ext_resource type="Script" uid="uid://bw2r5pxseuthg" path="res://spacetime_bindings/schema/types/main_view_type.gd" id="7_m5x7f"]

[sub_resource type="Gradient" id="Gradient_p8i4h"]
offsets = PackedFloat32Array(0.7097792, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.41215247, 0.41215247, 0.41215247, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fl47p"]
gradient = SubResource("Gradient_p8i4h")
fill = 2
fill_from = Vector2(0.5, 0.5)
metadata/_snap_enabled = true

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m5x7f"]
texture = SubResource("GradientTexture2D_fl47p")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0
region_rect = Rect2(0, 0, 64, 64)

[sub_resource type="Theme" id="Theme_7ntsj"]
Label/styles/normal = SubResource("StyleBoxTexture_m5x7f")

[sub_resource type="Resource" id="Resource_p8i4h"]
script = ExtResource("3_p8i4h")
metadata/primary_key = "t_u64"
metadata/bsatn_type_t_u64 = &"u64"
metadata/bsatn_type_t_u8 = &"u8"
metadata/bsatn_type_t_u16 = &"u16"
metadata/bsatn_type_t_u32 = &"u32"
metadata/bsatn_type_t_u128 = &"u128"
metadata/bsatn_type_t_f32 = &"f32"
metadata/bsatn_type_t_f64 = &"f64"
metadata/bsatn_type_t_i8 = &"i8"
metadata/bsatn_type_t_i16 = &"i16"
metadata/bsatn_type_t_i32 = &"i32"
metadata/bsatn_type_t_i64 = &"i64"
metadata/bsatn_type_t_string = &"string"
metadata/bsatn_type_t_vec_string = &"string"
metadata/bsatn_type_t_vec_u8 = &"u8"
metadata/underlying_type_t_opt_string = &"String"
metadata/bsatn_type_t_opt_string = &"string"
metadata/underlying_type_t_opt_u64 = &"int"
metadata/bsatn_type_t_opt_u64 = &"u64"
metadata/bsatn_type_t_test_enum = &"u8"
metadata/bsatn_type_t_test_enum_vec = &"u8"
metadata/underlying_type_t_test_enum_option = &"MainModuleClient.Types.TestEnum"
metadata/bsatn_type_t_test_enum_option = &"u8"
metadata/bsatn_type_t_test_type = &"u8"
metadata/bsatn_type_t_test_type_vec = &"u8"
metadata/underlying_type_t_test_type_option = &"MainTestType"
metadata/bsatn_type_t_test_type_option = &"u8"
metadata/bsatn_type_t_vec_u64 = &"u64"

[sub_resource type="Resource" id="Resource_m5x7f"]
script = ExtResource("3_p8i4h")
metadata/primary_key = "t_u64"
metadata/bsatn_type_t_u64 = &"u64"
metadata/bsatn_type_t_u8 = &"u8"
metadata/bsatn_type_t_u16 = &"u16"
metadata/bsatn_type_t_u32 = &"u32"
metadata/bsatn_type_t_u128 = &"u128"
metadata/bsatn_type_t_f32 = &"f32"
metadata/bsatn_type_t_f64 = &"f64"
metadata/bsatn_type_t_i8 = &"i8"
metadata/bsatn_type_t_i16 = &"i16"
metadata/bsatn_type_t_i32 = &"i32"
metadata/bsatn_type_t_i64 = &"i64"
metadata/bsatn_type_t_string = &"string"
metadata/bsatn_type_t_vec_string = &"string"
metadata/bsatn_type_t_vec_u8 = &"u8"
metadata/underlying_type_t_opt_string = &"String"
metadata/bsatn_type_t_opt_string = &"string"
metadata/underlying_type_t_opt_u64 = &"int"
metadata/bsatn_type_t_opt_u64 = &"u64"
metadata/bsatn_type_t_test_enum = &"u8"
metadata/bsatn_type_t_test_enum_vec = &"u8"
metadata/underlying_type_t_test_enum_option = &"MainModuleClient.Types.TestEnum"
metadata/bsatn_type_t_test_enum_option = &"u8"
metadata/bsatn_type_t_test_type = &"u8"
metadata/bsatn_type_t_test_type_vec = &"u8"
metadata/underlying_type_t_test_type_option = &"MainTestType"
metadata/bsatn_type_t_test_type_option = &"u8"
metadata/bsatn_type_t_vec_u64 = &"u64"
metadata/bsatn_type_t_i128 = &"I128"

[sub_resource type="Resource" id="Resource_fl47p"]
script = ExtResource("4_fl47p")
metadata/primary_key = "scheduled_id"
metadata/bsatn_type_scheduled_id = &"u64"
metadata/bsatn_type_h1 = &"string"
metadata/bsatn_type_scheduled_at = &"i64"
metadata/bsatn_type_h2 = &"string"
metadata/bsatn_type_public_count = &"u64"
metadata/bsatn_type_private_count = &"u64"
metadata/_custom_type_script = "uid://bsl5rglshjc06"

[sub_resource type="Resource" id="Resource_7ntsj"]
script = ExtResource("4_fl47p")
metadata/primary_key = "scheduled_id"
metadata/bsatn_type_scheduled_id = &"u64"
metadata/bsatn_type_h1 = &"string"
metadata/bsatn_type_scheduled_at = &"i64"
metadata/bsatn_type_h2 = &"string"
metadata/bsatn_type_public_count = &"u64"
metadata/bsatn_type_private_count = &"u64"

[sub_resource type="Resource" id="Resource_wkhtg"]
script = ExtResource("4_fl47p")
metadata/primary_key = "scheduled_id"
metadata/bsatn_type_scheduled_id = &"u64"
metadata/bsatn_type_h1 = &"string"
metadata/bsatn_type_scheduled_at = &"i64"
metadata/bsatn_type_h2 = &"string"
metadata/bsatn_type_public_count = &"u64"
metadata/bsatn_type_private_count = &"u64"
metadata/_custom_type_script = "uid://bsl5rglshjc06"

[sub_resource type="Resource" id="Resource_ruhfi"]
script = ExtResource("3_p8i4h")
metadata/primary_key = "t_u64"
metadata/bsatn_type_t_u64 = &"u64"
metadata/bsatn_type_t_u8 = &"u8"
metadata/bsatn_type_t_u16 = &"u16"
metadata/bsatn_type_t_u32 = &"u32"
metadata/bsatn_type_t_u128 = &"u128"
metadata/bsatn_type_t_f32 = &"f32"
metadata/bsatn_type_t_f64 = &"f64"
metadata/bsatn_type_t_i8 = &"i8"
metadata/bsatn_type_t_i16 = &"i16"
metadata/bsatn_type_t_i32 = &"i32"
metadata/bsatn_type_t_i64 = &"i64"
metadata/bsatn_type_t_string = &"string"
metadata/bsatn_type_t_vec_string = &"string"
metadata/bsatn_type_t_vec_u8 = &"u8"
metadata/underlying_type_t_opt_string = &"String"
metadata/bsatn_type_t_opt_string = &"string"
metadata/underlying_type_t_opt_u64 = &"int"
metadata/bsatn_type_t_opt_u64 = &"u64"
metadata/bsatn_type_t_test_enum = &"u8"
metadata/bsatn_type_t_test_enum_vec = &"u8"
metadata/underlying_type_t_test_enum_option = &"MainModuleClient.Types.TestEnum"
metadata/bsatn_type_t_test_enum_option = &"u8"
metadata/bsatn_type_t_test_type = &"MainTestType"
metadata/bsatn_type_t_test_type_vec = &"MainTestType"
metadata/underlying_type_t_test_type_option = &"MainTestType"
metadata/bsatn_type_t_test_type_option = &"MainTestType"
metadata/bsatn_type_t_vec_u64 = &"u64"

[sub_resource type="Resource" id="Resource_26wxn"]
script = ExtResource("7_m5x7f")
metadata/primary_key = ""
metadata/bsatn_type_row = &"u64"
metadata/bsatn_type_name = &"string"

[node name="IntegrationTests" type="Control" unique_id=1412664590]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_7ntsj")
script = ExtResource("1_11tcf")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=480057606]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TabContainer" type="TabContainer" parent="VBoxContainer" unique_id=1530080011]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="TestTableDatatypes" parent="VBoxContainer/TabContainer" unique_id=1146099436 node_paths=PackedStringArray("row_receiver") instance=ExtResource("2_p8i4h")]
layout_mode = 2
row_receiver = NodePath("Receiver [MainTestTableDatatypes]")
metadata/_tab_index = 0

[node name="Receiver [MainTestTableDatatypes]" type="Node" parent="VBoxContainer/TabContainer/TestTableDatatypes" unique_id=2138347038]
script = ExtResource("2_3ljp4")
table_to_receive = SubResource("Resource_p8i4h")
selected_table_name = "test_table_datatypes"
metadata/_custom_type_script = "uid://jvk6ou7i2d4s"

[node name="ViewDatatypesAllrows" parent="VBoxContainer/TabContainer" unique_id=568196677 node_paths=PackedStringArray("row_receiver") instance=ExtResource("2_p8i4h")]
visible = false
layout_mode = 2
row_receiver = NodePath("Receiver [MainTestTableDatatypes]2")
metadata/_tab_index = 1

[node name="Receiver [MainTestTableDatatypes]2" type="Node" parent="VBoxContainer/TabContainer/ViewDatatypesAllrows" unique_id=2013281197]
script = ExtResource("2_3ljp4")
table_to_receive = SubResource("Resource_m5x7f")
selected_table_name = "test_anonymous_all_types"
metadata/_custom_type_script = "uid://jvk6ou7i2d4s"

[node name="ViewDatatypesFirstRow" parent="VBoxContainer/TabContainer" unique_id=1825902961 node_paths=PackedStringArray("row_receiver") instance=ExtResource("2_p8i4h")]
visible = false
layout_mode = 2
row_receiver = NodePath("Receiver [MainTestTableDatatypes]3")
metadata/_tab_index = 2

[node name="Receiver [MainTestTableDatatypes]3" type="Node" parent="VBoxContainer/TabContainer/ViewDatatypesFirstRow" unique_id=1410077938]
script = ExtResource("2_3ljp4")
table_to_receive = SubResource("Resource_m5x7f")
selected_table_name = "test_first_type_row"
metadata/_custom_type_script = "uid://jvk6ou7i2d4s"

[node name="ViewDatatypesAt30" parent="VBoxContainer/TabContainer" unique_id=317481432 node_paths=PackedStringArray("row_receiver") instance=ExtResource("2_p8i4h")]
visible = false
layout_mode = 2
row_receiver = NodePath("Receiver [MainTestTableDatatypes]4")
metadata/_tab_index = 3

[node name="Receiver [MainTestTableDatatypes]4" type="Node" parent="VBoxContainer/TabContainer/ViewDatatypesAt30" unique_id=231777589]
script = ExtResource("2_3ljp4")
table_to_receive = SubResource("Resource_m5x7f")
selected_table_name = "test_u32_at_30"
metadata/_custom_type_script = "uid://jvk6ou7i2d4s"

[node name="TestScheduledTable" parent="VBoxContainer/TabContainer" unique_id=1202664408 node_paths=PackedStringArray("row_receiver") instance=ExtResource("2_p8i4h")]
visible = false
layout_mode = 2
row_receiver = NodePath("Receiver [MainTestScheduledTable]")
metadata/_tab_index = 4

[node name="Receiver [MainTestScheduledTable]" type="Node" parent="VBoxContainer/TabContainer/TestScheduledTable" unique_id=74907839]
script = ExtResource("2_3ljp4")
table_to_receive = SubResource("Resource_fl47p")
selected_table_name = "test_scheduled_table"
metadata/_custom_type_script = "uid://jvk6ou7i2d4s"

[node name="ViewScheduledPublic" parent="VBoxContainer/TabContainer" unique_id=17990108 node_paths=PackedStringArray("row_receiver") instance=ExtResource("2_p8i4h")]
visible = false
layout_mode = 2
row_receiver = NodePath("Receiver [MainTestScheduledTable]2")
metadata/_tab_index = 5

[node name="Receiver [MainTestScheduledTable]2" type="Node" parent="VBoxContainer/TabContainer/ViewScheduledPublic" unique_id=295188833]
script = ExtResource("2_3ljp4")
table_to_receive = SubResource("Resource_7ntsj")
selected_table_name = "test_public_scheduled_count"
metadata/_custom_type_script = "uid://jvk6ou7i2d4s"

[node name="ViewScheduledPrivate" parent="VBoxContainer/TabContainer" unique_id=818018630 node_paths=PackedStringArray("row_receiver") instance=ExtResource("2_p8i4h")]
visible = false
layout_mode = 2
row_receiver = NodePath("Receiver [MainTestScheduledTable]")
metadata/_tab_index = 6

[node name="Receiver [MainTestScheduledTable]" type="Node" parent="VBoxContainer/TabContainer/ViewScheduledPrivate" unique_id=1146059265]
script = ExtResource("2_3ljp4")
table_to_receive = SubResource("Resource_wkhtg")
selected_table_name = "test_private_scheduled_count"
metadata/_custom_type_script = "uid://jvk6ou7i2d4s"

[node name="ViewTestOption" parent="VBoxContainer/TabContainer" unique_id=792409064 node_paths=PackedStringArray("row_receiver") instance=ExtResource("2_p8i4h")]
visible = false
layout_mode = 2
row_receiver = NodePath("Receiver [MainTestScheduledTable]")
metadata/_tab_index = 7

[node name="Receiver [MainTestScheduledTable]" type="Node" parent="VBoxContainer/TabContainer/ViewTestOption" unique_id=1304192585]
script = ExtResource("2_3ljp4")
table_to_receive = SubResource("Resource_wkhtg")
selected_table_name = "test_option"
metadata/_custom_type_script = "uid://jvk6ou7i2d4s"

[node name="ViewTestQuery" parent="VBoxContainer/TabContainer" unique_id=1270783554 node_paths=PackedStringArray("row_receiver") instance=ExtResource("2_p8i4h")]
visible = false
layout_mode = 2
row_receiver = NodePath("Receiver [MainTestTableDatatypes]")
metadata/_tab_index = 8

[node name="Receiver [MainTestTableDatatypes]" type="Node" parent="VBoxContainer/TabContainer/ViewTestQuery" unique_id=1860002987]
script = ExtResource("2_3ljp4")
table_to_receive = SubResource("Resource_ruhfi")
selected_table_name = "test_query"
metadata/_custom_type_script = "uid://jvk6ou7i2d4s"

[node name="ViewNoPkOption" parent="VBoxContainer/TabContainer" unique_id=2116886938 node_paths=PackedStringArray("row_receiver") instance=ExtResource("2_p8i4h")]
visible = false
layout_mode = 2
row_receiver = NodePath("Receiver [MainViewType]")
metadata/_tab_index = 9

[node name="Receiver [MainViewType]" type="Node" parent="VBoxContainer/TabContainer/ViewNoPkOption" unique_id=1261867129]
script = ExtResource("2_3ljp4")
debug_mode = true
table_to_receive = SubResource("Resource_26wxn")
selected_table_name = "test_no_pk_option"
metadata/_custom_type_script = "uid://jvk6ou7i2d4s"

[node name="ViewNoPkQuery" parent="VBoxContainer/TabContainer" unique_id=208505887 node_paths=PackedStringArray("row_receiver") instance=ExtResource("2_p8i4h")]
visible = false
layout_mode = 2
row_receiver = NodePath("Receiver [MainViewType]")
metadata/_tab_index = 10

[node name="Receiver [MainViewType]" type="Node" parent="VBoxContainer/TabContainer/ViewNoPkQuery" unique_id=396937499]
script = ExtResource("2_3ljp4")
debug_mode = true
table_to_receive = SubResource("Resource_26wxn")
selected_table_name = "test_no_pk_query"
metadata/_custom_type_script = "uid://jvk6ou7i2d4s"

[node name="ViewNoPkVec" parent="VBoxContainer/TabContainer" unique_id=1514156573 node_paths=PackedStringArray("row_receiver") instance=ExtResource("2_p8i4h")]
visible = false
layout_mode = 2
row_receiver = NodePath("Receiver [MainViewType]")
metadata/_tab_index = 11

[node name="Receiver [MainViewType]" type="Node" parent="VBoxContainer/TabContainer/ViewNoPkVec" unique_id=1157552964]
script = ExtResource("2_3ljp4")
table_to_receive = SubResource("Resource_26wxn")
selected_table_name = "test_no_pk_vec"
metadata/_custom_type_script = "uid://jvk6ou7i2d4s"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=1146252556]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer" unique_id=483809168]
layout_mode = 2
size_flags_horizontal = 3
text = "Start Tests"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer" unique_id=489981006]
layout_mode = 2
size_flags_horizontal = 3
text = "End_tests"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
